welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
  if (outsideMode==true){
    if (n<=1)|| 10<=n)
    	return true
    else
    	return false
  }
  else{
    if (1<=n & n<=10)
    	return true
    else
    	return false
  }
}